--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,13 @@ footer {
 	background: #fff;
 	font-size: 0.8em;
 }
+
+div {
+  transition: all 0.5s ease;
+  background: red;
+  padding: 10px;
+}
+div:hover {
+  background: green;
+  padding: 20px;
+}
